feat: Support for $/progress
Fixes #190

Signed-off-by: azerr <azerr@redhat.com>